0.1011
  constraint function must retrun array reference, not array(not backword compatible)
  removed Validator::Custom validation_rule attribute(not backword compatibe)
  Validator::Custom::Result products attribute renamed to data(not backword compatible)
0.1002
  add_constraint is depricated. it is renamed to register_constraint
0.1001
  added Validator::Custom::data_filter()
  added Validator::Custom::Result::errors_to_hash()
  improved exception logic
0.0902
  update document
0.0901
  Validator::Custom error_infos data structure is changed(array ref to hash ref)
  add or validation
0.0802
  fix pod-coverage.t
0.0801
  "rule" is added in place of "validaton_rule"
  "validation_rule" is deprecated
  updata document
  "error_infos" and "add_error_info" is added to Validation::Custom::Result
0.0708
  catch up with 'Object::Simple' update
0.0706
  fix error message test
0.0705
  catch up with 'Object::Simple' update
0.0704
  cleanup
0.0702
  cleanup
0.0701
  add 'error' method
  'is_invalid' method can receive a specified key.
0.0608
  update document
  fix corelative key bug
0.0607
  improve error message
  add syntax method for seeing validation rule syntax
0.0606
  improve error message
  delete Validator::Custom::Result errors_to method (not backword compatible)
  delete Validator::Custom::Result products_to method (not backword compatible)
  delete Validator::Custom::Result invalid_keys_to method (not backword compatible)
0.0605
  catch up Object::Simple version up 2.0702
0.0604
  catch up Object::Simple version up 2.0701
0.0603
  catch up Object::Simple version up 2.0603
0.0602
  catch up Object::Simple version up 2.0602
0.0601
  add_constraint method can be used as object method and class method
  constraints method can be used as object mehtod and class mehtod
0.0501
  add 'is_valid' method to Validator::Custom::Result
0.0401
  validate method return Validator::Custom::Result object, not $self (not backword compatible)